# gpd-m2sep-france-property-insight

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.Docker.md  README.md  badscript.py  pyproject.toml
.devcontainer/: Dockerfile  README.Docker.md  compose.yaml  devcontainer.json
.gradio/flagged/: dataset1.csv
data/cleaned/: cleaned_sample2024.db  validated2024.db  validated_sample2024.db
data/cleaned/cleaned2021/: cleaned_75_2021.csv  cleaned_77_2021.csv  cleaned_78_2021.csv  cleaned_91_2021.csv  cleaned_92_2021.csv  cleaned_93_2021.csv  cleaned_94_2021.csv  cleaned_95_2021.csv
data/cleaned/cleaned2022/: cleaned_75_2022.csv  cleaned_77_2022.csv  cleaned_78_2022.csv  cleaned_91_2022.csv  cleaned_92_2022.csv  cleaned_93_2022.csv  cleaned_94_2022.csv  cleaned_95_2022.csv
data/cleaned/cleaned2023/: cleaned_75_2023.csv  cleaned_77_2023.csv  cleaned_78_2023.csv  cleaned_91_2023.csv  cleaned_92_2023.csv  cleaned_93_2023.csv  cleaned_94_2023.csv
data/cleaned/cleaned2024/: cleaned_75_2024.csv  cleaned_77_2024.csv  cleaned_78_2024.csv  cleaned_91_2024.csv  cleaned_92_2024.csv  cleaned_93_2024.csv  cleaned_94_2024.csv  cleaned_95_2024.csv
data/raw/: raw_idf2023.db  sample2024.db  sample2024.txt
docs/pdoc_config/: fpidoc.md
docs/stats/: correlation_matrix.csv  descriptive_stats.csv
fpi/: __init__.py  main.py
fpi/analysis/: count.py  explore.py  utils_io.py  utils_plot.py  utils_stats.py
fpi/data_pipeline/: clean.py  clean_data.py  convert_sql.py  count.py  extract_idf.py  sample.py  sql_import.py  txt_to_sqlite.py  validation.py
fpi/interface/: dashboard_page.py  menu.py
fpi/models/: app.py  build_linear_model.py  linear_model.pkl  linear_models.py  predict.py  reg.py  ridge_model.pkl
fpi/utils/: aliases.py  constants.py
fpi/utils/mermaid/: data-flow.mmd  git-mr-workflow.mmd
src/: __init__.py  main.py
src/analysis/: explore.py
src/data_pipeline/: sample.py
src/interface/: dashboard_page.py  home_page.py  menu.py  prediction_page.py
src/utils/: aliases.py  oranj.py
tests/: test_main.py
tests/behave/features/: navigation.feature
tests/behave/steps/: navigation_steps.py  tutorial.py
tests/unit/test_analysis/: test_explore.py
tests/unit/test_interface/: test_dashboard_page.py  test_home_page.py  test_menu.py  test_prediction_page.py
