[project]
name = "gpd-fpi"
version = "1.0"
description = "France Property Insight: Predicitve and analytic app for Master 2 SEP"
requires-python = ">=3.13"
dependencies = [
    "gradio==5.49.1",
    "joblib==1.5.2",
    "matplotlib==3.10.7",
    "numpy==2.3.3",
    "pandas==2.3.3",
    "pdoc==15.0.4",
    "pydantic>=2.11.10",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlalchemy==2.0.44",
]

# depedencies not needed for users
[dependency-groups]
dev = [
    "behave==1.3.3",
    "mypy==1.18.2",
    "pandas-stubs==2.3.2.250926",
    "pip-audit==2.9.0",
    "pre-commit==4.3.0",
    "pytest==8.4.2",
    "ruff==0.14.0",
]

[project.urls]
Homepage = "https://gpd-m2sep-france-property-insight.onrender.com/"
Documentation = "https://france-property-insight-docs.onrender.com/fpi.html"
Source = "https://gitlab-mi.univ-reims.fr/phan0005/gpd-m2sep-france-property-insight"

[tool.hatch.build.targets.wheel]
packages = ["fpi"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# change line length tolerance
[tool.ruff]
line-length = 120

# default linting rules + isort
[tool.ruff.lint]
select = ["E", "F", "I"]

# ignore missing type imports
[tool.mypy]
ignore_missing_imports = true

# uv run shortcuts
[project.scripts]
# run the app
main = "fpi.main:main"
fpi = "fpi.main:main"
fpidocker = "fpi.utils.aliases:fpidocker"
# code quality
precommit = "fpi.utils.aliases:precommit"
lint = "fpi.utils.aliases:precommit"
typecheck = "fpi.utils.aliases:typecheck"
audit = "fpi.utils.aliases:audit"
# unit tests, doctests, behave tests, local CI check
test = "fpi.utils.aliases:test"
ci = "fpi.utils.aliases:ci"
# API documentation
apidoc = "fpi.utils.aliases:apidoc"
apidocsave = "fpi.utils.aliases:apidocsave"
